force-app/main/default/objects/rve_Invigilator_Assignment__c/rve_Invigilator_Assignment__c.object-meta.xml
<CustomObject>
    <label>Invigilator Assignment</label>
    <nameField>
        <label>Invigilator Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invigilator Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>