force-app/main/default/objects/rve_Invigilator_Assignment__c/fields/rve_Attendance_Submitted__c.field-meta.xml
<CustomField>
    <fullName>rve_Attendance_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendance Submitted</label>
    <type>Checkbox</type>
</CustomField>