force-app/main/default/objects/rve_Invigilator_Assignment__c/fields/rve_Date__c.field-meta.xml
<CustomField>
    <fullName>rve_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>