force-app/main/default/objects/rve_Invigilator_Assignment__c/fields/rve_Exam_Time__c.field-meta.xml
<CustomField>
    <fullName>rve_Exam_Time__c</fullName>
    <label>Exam Start Time</label>
    <type>Time</type>
</CustomField>