force-app/main/default/objects/rve_Invigilator_Assignment__c/fields/rve_Professor__c.field-meta.xml
<CustomField>
    <fullName>rve_Professor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Professor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Professor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Invigilator_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>