force-app/main/default/objects/rve_Invigilator_Assignment__c/fields/rve_Room_Allotment__c.field-meta.xml
<CustomField>
    <fullName>rve_Room_Allotment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room Allotment</label>
    <referenceTo>IA_Seating_Room_Allotment__c</referenceTo>
    <relationshipLabel>Invigilator Assignments</relationshipLabel>
    <relationshipName>Invigilator_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>